aumentado archivos docker

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -19,8 +19,9 @@
     "username": "postgres",
     "password": "masterkey",
     "database": "bd_central",
-    "host": "127.0.0.1",
+    "host": "192.168.0.14",
     "schema": "sc_catalogos",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "port": "9001"
   }
 }
