--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "api_ubicaciones",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Alguna descripcion",
+  "main": "www",
   "scripts": {
     "start:dev": "nodemon ./server/bin/www",
+    "start:prod": "pm2 start ecosystem.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Node.Js",
+    "produccion"
+  ],
+  "author": "Stalin Ramirez -- SR_SharkTech",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
